force-app/main/default/objects/Master__c/fields/Aeropuerto_Destino__c.field-meta.xml
<CustomField>
    <fullName>Aeropuerto_Destino__c</fullName>
    <label>Aeropuerto Destino</label>
    <length>10</length>
    <type>Text</type>
</CustomField>