force-app/main/default/objects/Master__c/fields/Aeropuerto_Origen__c.field-meta.xml
<CustomField>
    <fullName>Aeropuerto_Origen__c</fullName>
    <label>Aeropuerto Origen</label>
    <length>10</length>
    <type>Text</type>
</CustomField>