force-app/main/default/objects/Master__c/fields/Arribo_de_carga__c.field-meta.xml
<CustomField>
    <fullName>Arribo_de_carga__c</fullName>
    <label>Arribo de carga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No arribada</fullName>
            </value>
            <value>
                <fullName>Arribada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>