force-app/main/default/objects/Master__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Masters</relationshipLabel>
    <relationshipName>Masters</relationshipName>
    <type>Lookup</type>
</CustomField>