force-app/main/default/objects/Master__c/fields/Entrega_de_carga_a_cliente__c.field-meta.xml
<CustomField>
    <fullName>Entrega_de_carga_a_cliente__c</fullName>
    <inlineHelpText>Fecha y hora en que se entrega la carga a cliente</inlineHelpText>
    <label>Entrega de carga a cliente</label>
    <type>DateTime</type>
</CustomField>