force-app/main/default/objects/Master__c/fields/Entrega_de_carga_a_HE__c.field-meta.xml
<CustomField>
    <fullName>Entrega_de_carga_a_HE__c</fullName>
    <inlineHelpText>Fecha y hora en que Blue Express entrega carga a HOT Express</inlineHelpText>
    <label>Entrega de carga a HE</label>
    <type>DateTime</type>
</CustomField>