force-app/main/default/objects/Master__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recepcionado</fullName>
                <default>true</default>
                <label>Recepcionado</label>
            </value>
            <value>
                <fullName>En Digitación</fullName>
            </value>
            <value>
                <fullName>Enviado a Atrex</fullName>
            </value>
            <value>
                <fullName>Depurado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>