force-app/main/default/objects/Master__c/fields/Estado_Carga__c.field-meta.xml
<CustomField>
    <fullName>Estado_Carga__c</fullName>
    <label>Estado Carga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No recibida</fullName>
                <default>true</default>
                <label>No recibida</label>
            </value>
            <value>
                <fullName>Recibida por HE</fullName>
            </value>
            <value>
                <fullName>Entregada a Blue Express</fullName>
            </value>
            <value>
                <fullName>Entregada a Chilexpress</fullName>
            </value>
            <value>
                <fullName>En bodega</fullName>
            </value>
            <value>
                <fullName>Solicitada a bodega</fullName>
            </value>
            <value>
                <fullName>En central ENEA</fullName>
            </value>
            <value>
                <fullName>Entregado a Starken</fullName>
            </value>
            <value>
                <fullName>Entregado a Chazki</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>