force-app/main/default/objects/Master__c/fields/Fecha_de_arribo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_arribo__c</fullName>
    <label>Fecha de arribo</label>
    <type>Date</type>
</CustomField>