force-app/main/default/objects/Master__c/fields/Fecha_Manifiesto_Aduana__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Manifiesto_Aduana__c</fullName>
    <label>Fecha Manifiesto Aduana</label>
    <type>Date</type>
</CustomField>