force-app/main/default/objects/Master__c/fields/Master_AirwayBill__c.field-meta.xml
<CustomField>
    <fullName>Master_AirwayBill__c</fullName>
    <externalId>true</externalId>
    <label>Master AirwayBill</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>