force-app/main/default/objects/Master__c/fields/N_Manifiesto_Aduana__c.field-meta.xml
<CustomField>
    <fullName>N_Manifiesto_Aduana__c</fullName>
    <description>Número entregado por la aduana</description>
    <inlineHelpText>Número entregado por la aduana</inlineHelpText>
    <label>Nº Manifiesto Aduana</label>
    <length>15</length>
    <type>Text</type>
</CustomField>