force-app/main/default/objects/Master__c/fields/Total_Cajas__c.field-meta.xml
<CustomField>
    <fullName>Total_Cajas__c</fullName>
    <label>Total Cajas</label>
    <summaryForeignKey>Caja__c.Master__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>