force-app/main/default/objects/Master__c/fields/Total_Peso__c.field-meta.xml
<CustomField>
    <fullName>Total_Peso__c</fullName>
    <label>Total Peso</label>
    <summarizedField>Detalles_Master__c.Peso__c</summarizedField>
    <summaryForeignKey>Detalles_Master__c.Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>