force-app/main/default/objects/Master__c/fields/Total_Piezas__c.field-meta.xml
<CustomField>
    <fullName>Total_Piezas__c</fullName>
    <label>Total Piezas</label>
    <summarizedField>Detalles_Master__c.Pieces__c</summarizedField>
    <summaryForeignKey>Detalles_Master__c.Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>