force-app/main/default/objects/Master__c/fields/Total_Valor__c.field-meta.xml
<CustomField>
    <fullName>Total_Valor__c</fullName>
    <label>Total Valor</label>
    <summarizedField>Detalles_Master__c.Valor__c</summarizedField>
    <summaryForeignKey>Detalles_Master__c.Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>