force-app/main/default/objects/Master__c/validationRules/Valida_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_name</fullName>
    <active>true</active>
    <description>asegura que el name y el master airwaybill sean iguales</description>
    <errorConditionFormula>IF(Name &lt;&gt;  Master_AirwayBill__c , true, false)</errorConditionFormula>
    <errorMessage>El nombre del Master debe ser igual al del Master Airwaybill</errorMessage>
</ValidationRule>